API: Added 'BookAppointment' Endpoint for All
