# openapi.yml
@@ -1362,6 +1362,190 @@ paths:
                 required:
                   - error
                   - message
+  /auth/internal/appointments/book:
+    post:
+      summary: Book an appointment
+      tags:
+        - Appointments
+        - Patient
+        - Doctor
+        - Admin
+      description: Endpoint to book an appointment for a patient with a doctor.
+      operationId: bookAppointment
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string
+                  nullable: true
+                  default: null
+                doctorId:
+                  type: string
+                patientId:
+                  type: string
+                upcoming:
+                  type: boolean
+                canceled:
+                  type: boolean
+                date:
+                  type: string
+                  format: date
+                time:
+                  type: string
+                  format: time
+                bookedBy:
+                  type: string
+                  enum:
+                    - Patient
+                    - Doctor
+                    - Admin
+                bookedAt:
+                  type: string
+                  format: date-time
+                updatedAt:
+                  type: string
+                  format: date-time
+                vitals:
+                  type: object
+                  properties:
+                    height:
+                      type: string
+                    weight:
+                      type: string
+                    bloodPressure:
+                      type: string
+                    heartRate:
+                      type: string
+                    temperature:
+                      type: string
+                preAppointmentNotes:
+                  type: string
+                actionsTaken:
+                  type: string
+                  default: ""
+                previousAppointmentId:
+                  type: string
+                nextAppointmentId:
+                  type: string
+                postAppointmentNotes:
+                  type: string
+                  default: ""
+              required:
+                - doctorId
+                - patientId
+                - upcoming
+                - canceled
+                - date
+                - time
+                - bookedBy
+                - preAppointmentNotes
+                - actionsTaken
+                - postAppointmentNotes
+      responses:
+        '201':
+          description: Appointment successfully booked
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  appointment:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                      doctor:
+                        type: object
+                        properties:
+                          id:
+                            type: string
+                          title:
+                            type: string
+                          forenames:
+                            type: string
+                          surname:
+                            type: string
+                        required:
+                          - id
+                          - title
+                          - forenames
+                          - surname
+                      patient:
+                        type: object
+                        properties:
+                          id:
+                            type: string
+                          title:
+                            type: string
+                          forenames:
+                            type: string
+                          surname:
+                            type: string
+                        required:
+                          - id
+                          - title
+                          - forenames
+                          - surname
+                      date:
+                        type: string
+                        format: date
+                      time:
+                        type: string
+                        format: time
+                    required:
+                      - id
+                      - doctor
+                      - patient
+                      - date
+                      - time
+        '403':
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                  message:
+                    type: string
+                required:
+                  - error
+                  - message
+        '422':
+          description: Unprocessable entity
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                  message:
+                    type: string
+                required:
+                  - error
+                  - message
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                  message:
+                    type: string
+                required:
+                  - error
+                  - message
 components:
   schemas:
     PatientData:
